<resources>
    <string name="app_name" translatable="false">Games Breack</string>
    <string name="nombre_de_usuario" translatable="false">Nombre de usuario</string>
    <string name="nombre" translatable="false">Nombre</string>
    <string name="apellido" translatable="false">Apellido</string>
    <string name="repetir_contrase_a" translatable="false">Repetir contraseña</string>
    <string name="ingrese_contrase_a" translatable="false">Ingrese contraseña</string>
    <string name="ingresar_monto" translatable="false">Ingresar monto</string>
    <string name="Logearse" translatable="false">Logearse</string>
    <string name="registrarse" translatable="false"><b>Registrarse</b></string>
    <string name="iniciar_sesion" translatable="false">Iniciar sesion</string>
    <string name="games_break" translatable="false">Games Break</string>
    <string name="logo" translatable="false">logo</string>
    <string name="compras">Historial de compras</string>
    <string name="recargar">recargar</string>
    <string name="tu_saldo_actual_es">Tu saldo actual es:</string>
    <string name="comprar">Agregar</string>
    <string name="bienvenido">Bienvenid@</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="biblioteca_de_juegos">Biblioteca de juegos</string>
    <string name="recargar_saldo">Recargar saldo</string>
    <string name="eliminar">Eliminar</string>
    <string name="carrito_de_compras">Carrito de compras</string>
    <string name="buscar_juego">Buscar juego...</string>
    <string name="total">TOTAL: $</string>
    <string name="steam">Steam</string>
    <string name="epic_store">Epic Games</string>
    <string name="nakama">Nakama</string>
    <string name="comision">Comision: $</string>
    <string name="cashback">Cashback: $</string>
    <string name="realizar_pago">Realizar pago</string>
    <string name="seleccione_la_tienda">Seleccione la Tienda</string>
    <string name="_0_00">0.00</string>
    <string name="ars">ARS</string>

    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
</resources>