<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nombre_de_usuario"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nombre_de_usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ingrese_contrase_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/apellido"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/apellido"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/confirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805" />

    <EditText
        android:id="@+id/ingrese_contrase_a"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ingrese_contrase_a"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/repetir_contrase_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/repetir_contrase_a"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/repetir_contrase_a"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <Button
        android:id="@+id/confirmar"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/Logearse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />
</androidx.constraintlayout.widget.ConstraintLayout>